--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body {
   text-align: center;
 }
 
-
+h1 {
+  text-align: center;
+}
 
 /* Slideshow container */
 .centered {
@@ -22,7 +24,8 @@ transform: translate(-50%, -50%);
 /* Carousel Item */
 
 .carousel-item{
-  
+  background:url('../img/h1-bg.png') epeat center top;
+
   background-size: cover;
 }
 .bs-example{
@@ -32,42 +35,7 @@ transform: translate(-50%, -50%);
 h1{
   font-family: "Montserrat-Bold";
 }
-/* DROPDOWN MENU */
-ul{
-  padding: 0;
-  list-style: none;
-  background: #f2f2f2;
-}
-ul li{
-  display: inline-block;
-  position: relative;
-  line-height: 21px;
-  text-align: left;
-}
-ul li a{
-  display: block;
-  padding: 8px 25px;
-  color: #333;
-  text-decoration: none;
-}
-ul li a:hover{
-  color: #fff;
-  background: #939393;
-}
-ul li ul.dropdown{
-  min-width: 100%; /* Set width of the dropdown */
-  background: #f2f2f2;
-  display: none;
-  position: absolute;
-  z-index: 999;
-  left: 0;
-}
-ul li:hover ul.dropdown{
-  display: block;	/* Display the dropdown */
-}
-ul li ul.dropdown li{
-  display: block;
-}
+
 
 
 /* Features Section */
@@ -99,13 +67,48 @@ h3 {
 
 
 
-/* FOOTER */
-
-footer {
-  background-color: #E3756D;
-  text-align: center;
-}
 /* Jumbotron */
 .card-body1 {
   background-color: lightblue;
+}
+
+
+
+/* Inputs styles */
+.contact .form-control {
+	border-radius:0!important;
+	;
+	-webkit-box-shadow:none;
+	box-shadow:none;
+}
+.contact .form-control:focus {
+	-webkit-box-shadow:none;
+	box-shadow:none;
+	border:1px solid #B0B0B0;
+}
+
+.btn-send{
+	background: black;
+	color: black;
+	transition: all 0.4s;
+	border-radius: 0;
+	float: right;
+}
+
+.btn-send:hover{
+	background: #FFE800;
+	color: black
+}
+
+button,button:focus,button:hover,button:active {
+	outline: none!important;
+}
+
+
+
+
+footer {
+  text-align: center;
+  background-color: whitesmoke;
+  
 }
